<resources>
    <string name="app_name">TwistedBets</string>

    <string name="title_profile">Profile</string>
    <string name="title_place_bet">Place Bet</string>
    <string name="title_bets">Bets</string>
        <!--    PLACE BET SCREEN-->
    <string name="search_player">Search Player</string>
    <string name="input_summoners_name">Enter summoners name</string>
    <string name="input_region">Region</string>
    <string name="place_bet_info">The bets that are placed will be applied on the next game that the player will play.</string>
    <string name="btn_find">Find</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_confirm">Confirm Bet</string>
    <string name="selecting_bets_title">Selecting bets for : %1$s</string>
    <string name="confirming_bets_title">Confirming bets for : %1$s</string>

    <string name="new_balance_text">Your new balance will be: %.0f</string>
    <string name="check_bet_button">Check Bet</string>
    <string name="Retrieve_credits">Retrieve %.2f credits</string>
    <string name="ongoing_bets_title">Placed Bets</string>

    <string name="player_name">Niels van Oeffel</string>
    <string name="history">Bet History</string>
    <string name="win_amount">You won:  %1$s Credits </string>

    <string name="checking_for_new_game">Checking if %1$s has played a new game</string>
    <string name="checking_for_stats">Found a new game, Checking game stats for %1$s</string>
    <string name="player_no_new_game">%1$s did not play another game</string>
    <string name="lost_all_bets">You did not win any credits.</string>
    <string name="added_to_wallet">Added %1$s credits to your wallet.</string>



</resources>