<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.twistedbets.ui.home.HomeFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.twistedbets.ui.PlaceBet.PlaceBetFragment"
        android:label="@string/title_place_bet"
        tools:layout="@layout/fragment_place_bets">
        <action
            android:id="@+id/action_navigation_dashboard_to_select_bet"
            app:destination="@id/select_bets" />
    </fragment>


    <fragment
        android:id="@+id/bet_backlog"
        android:name="com.example.twistedbets.ui.betBacklog.BetBacklogFragment"
        android:label="@string/title_bets"
        tools:layout="@layout/fragment_bets" />

    <fragment
        android:id="@+id/select_bets"
        android:name="com.example.twistedbets.ui.selectBet.SelectBetFragment"
        android:label="@string/title_bets"
        tools:layout="@layout/fragment_select_bets" >
        <action
            android:id="@+id/action_select_bets_to_confirm_bets"
            app:destination="@id/confirm_bets" />
    </fragment>


    <fragment
        android:id="@+id/confirm_bets"
        android:name="com.example.twistedbets.ui.confirmBet.ConfirmBetFragment"
        android:label="@string/title_bets"
        tools:layout="@layout/fragment_confirm_bet" />



</navigation>